<resources>
    <string name="app_name">Flight Archery Tracker</string>

    <string name="fragment_title_1">Training</string>
    <string name="fragment_title_2">Records</string>

    <string name="button_start_training">Start Training</string>
    <string name="button_save_shoot">Save Shot</string>
    <string name="button_stop_current_training">Stop Training</string>
    <string name="button_toolbar_arrow_back">Toolbar Arrow back</string>

...
    <string name="item_shot_id">1</string>
    <string name="item_shot_distance_title">Distance:</string>
    <string name="item_shot_distance">100</string>
    <string name="item_shot_meters">meters</string>
    <string name="item_shot_description">Here some comments</string>

    <string name="alert_dialog_delete_title">Delete Training</string>
    <string name="alert_dialog_delete_message">Are you sure?</string>
    <string name="alert_dialog_delete_positive">Yes</string>
    <string name="alert_dialog_delete_negative">No</string>

    <string name="alert_dialog_delete_all_title">Delete All Trainings</string>
    <string name="alert_dialog_delete_all_message">Are you sure?</string>
    <string name="alert_dialog_delete_all_positive">Yes</string>
    <string name="alert_dialog_delete_all_negative">No</string>

    <string name="alert_dialog_stop_training_title">Stop this Training</string>
    <string name="alert_dialog_stop_training_message">Are you sure?</string>
    <string name="alert_dialog_stop_training_positive">Yes</string>
    <string name="alert_dialog_stop_training_negative">No</string>

    <string name="alert_dialog_no_gps_message_part">This application requires GPS to work properly, do you want to enable it?</string>
    <string name="alert_dialog_no_gps_positive">Yes</string>

    <string name="toast_before_delete_all">Please, make sure that you stop your current training</string>
    <string name="toast_no_google_play_service">Please activate Google Play Service</string>
...
