...
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="100">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_start_training"
            style="@style/MainButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:text="@string/button_start_training" />

        <Button
            android:id="@+id/btn_stop_training"
            style="@style/StopButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:text="@string/button_stop_current_training" />

...
