...
                android:layout_centerInParent="true"
                android:layout_marginTop="25dp"
                android:text="@string/item_training_see_shots"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <ImageView
                android:id="@+id/iv_training_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="5dp"
...
